# bitcoin-arch-v2

./: README.md
bitcoin/: Cargo.toml
bitcoin/examples/: bip32.rs  sighash.rs
bitcoin/src/: address.rs  amount.rs  bip32.rs  hash_types.rs  lib.rs  pow.rs  pow_2.rs  taproot.rs  utils.rs
bitcoin/src/blockdata/: block.rs  fee_rate.rs  transaction.rs  weight.rs  witness.rs
bitcoin/src/blockdata/locktime/: absolute.rs  relative.rs
bitcoin/src/blockdata/script/: borrowed.rs  builder.rs  owned.rs
bitcoin/src/common/: mod.rs  types.rs
bitcoin/src/consensus/: encode.rs
bitcoin/src/crypto/: ecdsa.rs  error.rs  key.rs  scalar.rs  sighash.rs  taproot.rs
bitcoin/src/merkle_tree/: block.rs
bitcoin/src/network/: constants.rs
bitcoin/src/psbt/: error.rs  mod.rs  raw.rs  serialize.rs
bitcoin/src/psbt/map/: input.rs  output.rs
bitcoin/src/taproot/: mod.rs
bitcoin/src/util/: mod.rs
bitcoin/tests/: bip_174.rs  psbt-sign-taproot.rs  psbt.rs
units/src/: amount.rs  fee_rate.rs  weight.rs
units/src/locktime/: relative.rs
