[package]
name = "bitcoin"
version = "0.1.0"
edition = "2021"

[features]
default = [ "std"]
serde = ["actual-serde", "bitcoin_hashes/serde"]
borsh_serde = ["borsh"]
bitcoinconsensus-std = ["bitcoinconsensus/std", "std"]

# At least one of std, no-std must be enabled.
#
# The no-std feature doesn't disable std - you need to turn off the std feature for that by disabling default.
# Instead no-std enables additional features required for this crate to be usable without std.
# As a result, both can be enabled without conflict.
std = ["bitcoin_hashes/std", "bech32/std", "bitcoin-internals/std"]
no-std = ["core2", "bitcoin_hashes/alloc", "bitcoin_hashes/core2"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
k256 = { version = "0.13.3", default-features = false, features = ["arithmetic", "alloc", "schnorr", "ecdsa", "sha256"] }
bitcoin-internals = { path = "../internals", package = "bitcoin-private", version = "0.1.0" }
bech32 = { version = "0.9.0", default-features = false }
bitcoin_hashes = { version = "0.12.0", default-features = false }
once_cell = { version = "1.18.0", default-features = false, features = ["std"] }
subtle = { version = "2.5.0", default-features = false, features = ["std", "const-generics"] }
hex = { package = "hex-conservative", version = "0.2.0", default-features = false, features = ["alloc"] }
hex_lit = "0.1.1"

base64 = { version = "0.13.0", optional = true }
bitcoinconsensus = { version = "0.20.2-0.5.0", default-features = false, optional = true }
core2 = { version = "0.3.0", default-features = false, features = ["alloc"], optional = true }
# Do NOT use this as a feature! Use the `serde` feature instead.
actual-serde = { package = "serde", version = "1.0.103", default-features = false, features = [ "derive", "alloc" ], optional = true }
borsh = { package = "borsh", version = "1.5.0", default-features = false, features = [ "derive" ], optional = true }

[dev-dependencies]
serde_json = "1.0.0"
serde_test = "1.0.19"
serde_derive = "1.0.103"
bincode = "1.3.1"

[target.'cfg(mutate)'.dev-dependencies]
mutagen = { git = "https://github.com/llogiq/mutagen" }
